--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ header {
     align-items: center;
     font-size: 1.3rem;
     margin-top: 20px;
+    gap: 10px;
 }
 
 h1 {
@@ -123,4 +124,14 @@ input[type=checkbox] {
     color: white;
     border: 2px solid black;
     font-size: 16px;
+}
+
+
+
+
+
+
+.book-container {
+    display: grid;
+    
 }
