--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ h1 {
     color: white;
 }
 
-
 .new-book {
     background: white;
     padding: 0.6em 1.3em;
@@ -56,7 +55,6 @@ h1 {
     border-radius: 0.4em;
 }
 
-
 .book-form {
     display: flex;
     flex-direction: column;
@@ -65,6 +63,11 @@ h1 {
     width: 308px;
     height: 389px;
     background-color: white;
+}
+
+.book-form h2 {
+    margin-top: 20px;
+    font-size: 2rem;
 }
 
 .form-input :nth-child(2) {
@@ -129,15 +132,43 @@ input[type=checkbox] {
     gap: 78px;
 }
 
-
 .book-container {
     display: grid;
     font-family:'OpenSans', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     justify-content: center;
     align-items: center;
-    grid-auto-rows: 70px;
+    grid-template-rows: 70px 70px 70px;
+    grid-template-columns: 137px 52px;
     background-color: white;
     width: 250px;
     height: 350px;
     border-radius: 6px;
+    border: 5px solid;
+}
+
+.book-container h2, .book-container p, .book-container button {
+    display: flex;
+    justify-content: center;
+    grid-column: 1 / 3;
+    font-family: 'OpenSans', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.book-container h2 {
+    font-size: 1.4rem;
+}
+
+.book-container p {
+    font-size: 1.2rem;
+}
+
+#toggle-read, #delete {
+    cursor: pointer;
+    padding: 5px 16px;
+    font-size: 14px;
+    line-height: 20px;
+    border: 1px solid;
+    border-radius: 6px;
+    color: #ffffff;
+    border-color: #1b1f2326;
+    transition: 0.2s cubic-bezier(0.3, 0, 0.5, 1);
 }
