--- a/style.css
+++ b/style.css
@@ -128,8 +128,9 @@ input[type=checkbox] {
 #book-list {
     display: flex;
     margin-top: 80px;
-    margin-left: 60px;
-    gap: 78px;
+    margin-left: 50px;
+    gap: 60px;
+    flex-wrap: wrap;
 }
 
 .book-container {
@@ -137,13 +138,14 @@ input[type=checkbox] {
     font-family:'OpenSans', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     justify-content: center;
     align-items: center;
-    grid-template-rows: 70px 70px 70px;
-    grid-template-columns: 137px 52px;
+    grid-template-rows: 50px 50px 50px 50px 50px;
+    grid-template-columns: 190px;
     background-color: white;
     width: 250px;
-    height: 350px;
+    height: 334px;
     border-radius: 6px;
     border: 5px solid;
+    padding-top: 27px;
 }
 
 .book-container h2, .book-container p, .book-container button {
